flex/flex-tests/testData/js2_highlighting/UsingPropertyAsFunctionCall.js2
package {
    public class UsingPropertyAsFunctionCall {
        function get bar():Number { return 1; }
        public function UsingPropertyAsFunctionCall() {
            var foo:Object = <error descr="Property cannot be invoked as function">b<caret>ar</error>();
            var that:UsingPropertyAsFunctionCall = this;
            foo = that.<error descr="Property cannot be invoked as function">bar</error>();
        }
    }}